--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </tr>
     <tr>
     <td>2017</td>
-    <td>Rreseracher at The Institute of Cognitive Neuroscience</td>
+    <td>Researcher at The Institute of Cognitive Neuroscience</td>
     </tr>
     <hr>
     <tr>
